# lol-jgl-agent

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  기획서.md  대시보드-서버.cmd  대시보드-열기.cmd  전적-업데이트.cmd
knowledge/: README.md
knowledge/principles/: 01-jungle-fundamentals.md  02-reading-map-and-enemy-jungler.md  03-snowball-and-sitting.md  04-midgame-closing-15-25.md  05-timing-and-tempo.md  06-dragon-timing.md  07-operating-and-numbers.md  08-late-positioning-and-comeback.md
src/lol_jgl_agent/: __init__.py  cli.py  config.py  history.py  pipeline.py  serve.py  watch.py
src/lol_jgl_agent/advisor/: __init__.py  backend.py  prompt.py
src/lol_jgl_agent/analysis/: __init__.py  benchmarks.py  insights.py  jungle.py  opponent.py  pathing.py
src/lol_jgl_agent/report/: __init__.py  dashboard.py  renderer.py
src/lol_jgl_agent/riot/: __init__.py  client.py  models.py
tests/: test_benchmarks.py  test_config.py  test_dashboard.py  test_history.py  test_insights.py  test_jungle_metrics.py  test_opponent.py  test_pipeline.py  test_report.py  test_riot_client.py
